# actinn-jax

./: .gitignore  BENCHMARK_PLAN.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
actinn_jax/: __init__.py  actinn_predict.py  actinn_utils.py  embed.py  hierarchy.py  novelty.py
actinn_jax/references/: README.md
actinn_jax/references/broad_human_v1/: coarse.json  coarse.npz  fine_1.json  fine_1.npz  fine_10.json  fine_10.npz  fine_11.json  fine_11.npz  fine_12.json  fine_12.npz  fine_13.json  fine_13.npz  fine_14.json  fine_14.npz  fine_15.json  fine_15.npz  fine_16.json  fine_16.npz  fine_17.json  fine_17.npz  fine_18.json  fine_18.npz  fine_19.json  fine_19.npz  fine_2.json  fine_2.npz  fine_20.json  fine_20.npz  fine_21.json  fine_21.npz  fine_22.json  fine_22.npz  fine_23.json  fine_23.npz  fine_24.json  fine_24.npz  fine_25.json  fine_25.npz  fine_26.json  fine_26.npz  (+19 more)
actinn_jax/references/liver_hlica_v1/: coarse.json  coarse.npz  fine_cholangiocyte.json  fine_cholangiocyte.npz  fine_endothelial.json  fine_endothelial.npz  fine_hepatocyte.json  fine_hepatocyte.npz  fine_lymphocyte.json  fine_lymphocyte.npz  fine_mesenchyme.json  fine_mesenchyme.npz  fine_myeloid.json  fine_myeloid.npz  manifest.json
actinn_jax/references/liver_hlica_v2/: coarse.json  coarse.npz  fine_cholangiocyte.json  fine_cholangiocyte.npz  fine_endothelial.json  fine_endothelial.npz  fine_hepatocyte.json  fine_hepatocyte.npz  (+7 more)
benchmark/: bench_backend.py  benchmark.py  verify_real.py
examples/: annotate_with_timing.ipynb  build_reference.py  detect_novel_celltypes.py  liver_zonation.ipynb  novel_celltypes.ipynb  quickstart_annotate.py
tests/: conftest.py  test_actinn.py  test_hierarchy.py  test_novelty.py
